@@ -2353,8 +2353,8 @@ TEAM_26_to_37_CONVERTED_MESSAGE=The project was converted successfully.\n\
     additional steps need to be taken.
 
 TEAM_USERPASS_TITLE=Authentication
-TEAM_USERPASS_FIRST=Please enter username/password
-TEAM_USERPASS_WRONG=Wrong username/password
+TEAM_USERPASS_FIRST=Please enter username/password for {0}
+TEAM_USERPASS_WRONG=Wrong username/password for {0}
 
 TEAM_NEW_PROJECT_URL_OR_FILE=<html>Repository URL:</html>
 TEAM_NEW_HEADER=Download Team Project
