@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 5.5.0
 ----------------------------------------------------------------------
-  4 Enhancements
+  5 Enhancement
   0 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
@@ -20,6 +20,9 @@
 
   - Glossary layout plugin system
   https://sourceforge.net/p/omegat/feature-requests/1538/
+
+  - Add repository name to credentials dialog in team projects
+  https://sourceforge.net/p/omegat/feature-requests/1539/
 
 ----------------------------------------------------------------------
  OmegaT 5.4.1 (2020-12-15)
